crates/templates/tests/snapshots/parse_command_arguments_test__impl-7.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
description: Parse commands with one positional arguments
expression: output
---
parse_bar_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        bar_usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -?*)
        printf "invalid option: %s\n" "$key" >&2
        exit 1
        ;;
      *)
        if [[ -z ${args['foo']+x} ]]; then
          args['foo']=$key
          shift
        else
          printf "Invalid argument: %s\n" "$key" >&2
          exit 1
        fi
        ;;
    esac
  done
}

