crates/templates/tests/snapshots/parse_command_arguments_test__impl.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
expression: output
---

  action="${1:-}"

  case $action in

    bar)
      action="bar"
      input=("${input[@]:1}")
      ;;
    baz)
      action="baz"
      input=("${input[@]:1}")
      ;;
    foo)
      action="foo"
      input=("${input[@]:1}")
      ;;
    -h | --help)
      usage
      exit
      ;;
    "")
      usage >&2
      exit 1
      ;;
    *)
      printf "Invalid command: %s\n" "$action" >&2
      exit 1
      ;;
  esac

