crates/templates/tests/snapshots/parse_command_arguments_test__render-10.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
description: Parse commands with two required positional arguments
expression: output
---
parse_bar_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        bar_usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -?*)
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option: " "$key" >&2
        exit 1
        ;;
      *)
        if [[ -z "$rargs_foo" ]]; then
          rargs_foo=$key
          shift
        elif [[ -z "$rargs_bar" ]]; then
          rargs_bar=$key
          shift
        else
          printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid argument: " "$key" >&2
          exit 1
        fi
        ;;
    esac
  done
}
